<resources>
    <string name="app_name">sensory</string>
    <string name="title_activity_maps">sensory</string>
    <string name="activity_unknown">activity_unknown</string>
    <string name="activity_in_vehicle">activity_in_vehicle</string>
    <string name="activity_on_bicycle">activity_on_bicycle</string>
    <string name="activity_on_foot">activity_on_foot</string>
    <string name="activity_running">activity_running</string>
    <string name="activity_still">activity_still</string>
    <string name="activity_tilting">activity_tilting</string>
    <string name="activity_walking">activity_walking</string>
    <string name="Confidence">confidence</string>
    <string name="indoors">Indoors</string>
    <string name="start">Start</string>
    <string name="room">Room</string>
    <string name="building">Building</string>
    <string name="env_context">env_context</string>
    <string name="center">Center</string>
    <string name="collection_settings">Collection Settings</string>
    <string name="floor">Floor</string>
    <string name="mean_building_floor">mean building floor</string>
    <string name="current_floor_data">current floor data</string>
    <string name="set_map">Set Map</string>
    <string name="API_KEY">AIzaSyBYJbhGFl17ejbVxeiqlcoSk2epVB3ALd0</string>
</resources>